k8s-deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: customer-1
---
apiVersion: v1
kind: Namespace
metadata:
  name: customer-2
