k8s-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: info-app-service
spec:
  selector:
    app: info-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: info-app-service
  namespace: customer-1
spec:
  selector:
    app: info-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: info-app-service
  namespace: customer-2
spec:
  selector:
    app: info-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
